// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init
// npx prisma db seed
// npx prisma migrate dev
// npx prisma generate
generator client {
  provider = "prisma-client-js"
  previewFeatures = ["fullTextSearchPostgres"]
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ENUM

enum Role {
  USER
  ADMIN
}

model User {
  id                 String    @id @default(cuid())
  name               String?
  email              String    @unique
  emailVerified      DateTime?
  hashedPassword     String?
  role               Role      @default(USER)
  image              String?
  createdAt          DateTime  @default(now())
  updatedAt          DateTime  @updatedAt
  hashedRefreshToken String?
  profile            Profile?

  tracks Track[]

  likes     Like[]
  reposts   Repost[]
  comments  Comment[]
  following Follow[]  @relation("Following")
  followers Follow[]  @relation("Follower")

  playlists Playlist[]

  reports           Report[]
  VerificationToken VerificationToken?

  recentListens RecentListen[]
}

model VerificationToken {
  id        String   @id @default(cuid())
  token     String   @unique // Token duy nhất được gửi qua link
  expires   DateTime // Thời gian hết hạn
  createdAt DateTime @default(now())

  userId String @unique // Liên kết 1-1 với User (chỉ 1 token đang chờ cho 1 user)
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model Profile {
  id       String  @id @default(cuid())
  bio      String?
  location String?
  coverUrl String? 

  websiteProfiles WebsiteProfile[]

  userId String @unique
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model WebsiteType {
  id   String  @id @default(cuid())
  type String  @unique // "YOUTUBE", "FACEBOOK", "TWITTER", "TIKTOK"
  icon String? // Tên icon (ví dụ: "FaYoutube") hoặc URL của icon

  // Một loại website có thể được nhiều profile sử dụng
  websiteProfiles WebsiteProfile[]
}

// Bảng lưu các link cụ thể của từng Profile
model WebsiteProfile {
  id  String @id @default(cuid())
  url String // Đường link đầy đủ, ví dụ: "https://youtube.com/user/..."

  websiteTypeId String
  websiteType   WebsiteType @relation(fields: [websiteTypeId], references: [id])

  profileId String
  profile   Profile @relation(fields: [profileId], references: [id], onDelete: Cascade)
}

model Track {
  id          String   @id @default(cuid())
  title       String
  description String?  @db.Text
  imagePath   String? // URL ảnh bìa
  audioPath   String // URL file nhạc
  duration    Int? // Thời lượng (tính bằng giây)
  playCount   Int      @default(0)
  waveform    Json? // Lưu dữ liệu sóng nhạc (ví dụ: một mảng số)
  isPublic    Boolean  @default(true) // Mặc định là công khai
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  // --- Admin kiểm soát ---
  // Mặc định là 'false'. Admin sẽ lật thành 'true' nếu muốn cấm.
  isBanned Boolean @default(false)

  // --- Mối quan hệ với User (Bài hát này của ai?) ---
  userId String
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  likes Like[]

  reposts Repost[]

  comments Comment[]

  playlistTracks PlaylistTrack[]

  reports Report[]

  recentListens RecentListen[]
}

model Like {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())

  // --- Mối quan hệ ---
  userId String
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  trackId String
  track   Track  @relation(fields: [trackId], references: [id], onDelete: Cascade)

  // Đảm bảo một người dùng chỉ thích một bài hát một lần
  @@unique([userId, trackId])
}

model Repost {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())

  // --- Mối quan hệ ---
  userId String
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  trackId String
  track   Track  @relation(fields: [trackId], references: [id], onDelete: Cascade)

  // Đảm bảo một người dùng chỉ đăng lại một bài hát một lần
  @@unique([userId, trackId])
}

model Comment {
  id        String   @id @default(cuid())
  content   String   @db.Text
  createdAt DateTime @default(now())

  // (Gợi ý): Thời điểm (tính bằng giây) trong bài hát mà bình luận được ghim vào
  timestamp Int?

  // --- Mối quan hệ ---
  userId String
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  trackId String
  track   Track  @relation(fields: [trackId], references: [id], onDelete: Cascade)
}

model Follow {
  createdAt DateTime @default(now())

  // --- Người đi theo dõi ---
  followerId String
  follower   User   @relation("Following", fields: [followerId], references: [id], onDelete: Cascade)

  // --- Người được theo dõi ---
  followingId String
  following   User   @relation("Follower", fields: [followingId], references: [id], onDelete: Cascade)

  // Khóa chính kết hợp
  @@id([followerId, followingId])
}

model Playlist {
  id          String   @id @default(cuid())
  title       String
  description String?  @db.Text
  isPublic    Boolean  @default(true)
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  userId String
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  // Một playlist có một danh sách các bản ghi 'PlaylistTrack'
  tracks PlaylistTrack[]
}

model PlaylistTrack {
  id      String   @id @default(cuid())
  order   Int // Vị trí của bài hát trong playlist (ví dụ: 1, 2, 3...)
  addedAt DateTime @default(now())

  // --- Mối quan hệ với Playlist ---
  playlistId String
  playlist   Playlist @relation(fields: [playlistId], references: [id], onDelete: Cascade)

  // --- Mối quan hệ với Track ---
  trackId String
  track   Track  @relation(fields: [trackId], references: [id], onDelete: Cascade)

  // Đảm bảo một bài hát chỉ xuất hiện 1 lần trong 1 playlist
  @@unique([playlistId, trackId])
}

model ReportReason {
  id     String @id @default(cuid())
  reason String @unique // Lý do, ví dụ: "COPYRIGHT" hoặc "Nội dung vi phạm"

  // Một lý do có thể được dùng cho nhiều báo cáo
  reports Report[]
}

model Report {
  id        String   @id @default(cuid())
  message   String?  @db.Text // Ghi chú thêm của người báo cáo
  createdAt DateTime @default(now())

  // --- Mối quan hệ với ReportReason (Lý do là gì?) ---
  reportReasonId String
  reportReason   ReportReason @relation(fields: [reportReasonId], references: [id])

  // --- Mối quan hệ với Track (Báo cáo bài hát nào?) ---
  trackId String
  track   Track  @relation(fields: [trackId], references: [id], onDelete: Cascade)

  // --- Mối quan hệ với User (Ai là người báo cáo?) ---
  reporterId String
  reporter   User   @relation(fields: [reporterId], references: [id], onDelete: Cascade)
}

model RecentListen {
  id          String   @id @default(cuid())
  userId      String
  user        User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  trackId     String
  track       Track    @relation(fields: [trackId], references: [id], onDelete: Cascade)
  lastPlayedAt DateTime @default(now())
  playCount   Int      @default(1)

  @@unique([userId, trackId])
  @@index([userId, lastPlayedAt])
}
