@startuml Class Diagram Mức Phân Tích - Hệ Thống Nghe Nhạc Trực Tuyến
title Class Diagram Mức Phân Tích - Hệ Thống Nghe Nhạc Trực Tuyến

package "Enums" {
    enum Role {
        USER
        ADMIN
    }

    enum ReportStatus {
        PENDING
        PROCESSED
    }

    enum ReportAction {
        HIDE_SONG
        WARN_USER
        DISMISS
    }

}

' --- ENTITIES ---
package "Database Entities" {
    class User {
        - id: string
        - name: string
        - email: string
        - hashedPassword: string
        - imageUrl: string
        - isLocked: boolean = false
        - role: Role
        - createdAt: Date = now
        - updatedAt: Date
    }

    class Profile {
        - id: string
        - bio: string
    }

    class Song {
        - id: string
        - title: string
        - description: string
        - imageUrl: string
        - audioUrl: string
        - duration: number
        - playCount: number
        - isPublic: boolean = true
        - createdAt: Date = now
        - updatedAt: Date
        - isBanned: boolean = false
    }

    class PlaylistSong {
        - id: string
        - addedAt: Date = now
    }

    class Playlist {
        - id: string
        - title: string
        - description: string
        - imageUrl: string
        - isPublic: boolean = true
        - createdAt: Date = now
        - updatedAt: Date
    }

    class Like {
        - id: string
        - createdAt: Date = now
    }

    class Comment {
        - id: string
        - content: string
        - createdAt: Date = now
    }

    class Follow {
        - id: string
        - createdAt: Date = now
    }

    class Repost {
        - id: string
        - createdAt: Date = now
    }

    class Share {
        - id: string
        - createdAt: Date = now
        - platform: string
    }

    class Report {
        - id: string
        - content: string
        - createdAt: Date = now
        - status: ReportStatus
        - action: ReportAction
    }

    class Notification {
        - id: string
        - content: string
        - isRead: boolean = false
        - createdAt: Date = now
    }

    class RecentListen {
        - id: string
        - lastPlayedAt: Date = now
        - playCount: number = 1
    }
}

' --- RELATIONSHIPS ---

' 1. USER & AUTH
User "1" *-- "1" Profile : có >

' 2. FOLLOW
User "1" -- "0..*" Follow : theo dõi >
User "1" -- "0..*" Follow : được theo dõi bởi <

' 3. PLAYLIST & SONG
User "1" *-- "0..*" Playlist : tạo >
User "1" -- "0..*" Song : tải lên >

' Quan hệ tập hợp: Playlist chứa nhiều bài hát
Playlist "1" *-- "*" PlaylistSong : Chứa
PlaylistSong "*" -- "1" Song : Tham chiếu

' 4. INTERACTIONS
User "1" -- "0..*" Like : thích >
Song "1" *-- "*" Like : thuộc về

User "1" -- "0..*" Comment : viết >
Song "1" *-- "*" Comment : thuộc về

User "1" -- "0..*" Repost : đăng lại >
Song "1" *-- "*" Repost : thuộc về

User "1" -- "0..*" Share : chia sẻ >
Song "1" *-- "*" Share : thuộc về

' 5. REPORT SYSTEM
User "1" -- "0..*" Report : báo cáo >
Report "0..*" -- "1" Song : thuộc về >
User "1" -- "0..*" Report : xử lý (Admin) >

' 6. NOTIFICATION
User "1" *-- "0..*" Notification : nhận >

'7. RECENT LISTEN
User "1" *-- "0..*" RecentListen : có >
Song "1" -- "0..*" RecentListen : thuộc về

@enduml